--- a/public/css/main.css
+++ b/public/css/main.css
@@ -9,13 +9,14 @@ body {
     
 }
 
+:root {
+    font-size: 62.5%;
+}
+
 body, input, button, textarea {
-    font: 400 18px/1 'Nunito', sans-serif;
+    font: 400 1.8rem/1 'Nunito', sans-serif;
 }
 
-#page-landing {
-    background: linear-gradient(329.54deg, #29B6D1 0%, #00C7C7 100%) no-repeat;
 
-    text-align: center;
-    min-height: 100vh;
-}
+
+
