--- a/public/CSS/main.css
+++ b/public/CSS/main.css
@@ -8,13 +8,51 @@ body {
     color: white;
 }
 
-body, input, button, textarea {
-    font: 400 18px/1 'Nunito', sans-serif;
+:root {
+    font-size: 62.5%;
 }
 
-#page-landing {
-    background: linear-gradient(329.54deg, #29b6d1 0%, #00c7c7 100%);
+body, input, button, textarea {
+    font: 400 1.8rem/1 'Nunito', sans-serif;
+}
 
-    text-align: center;
-    min-height: 100vh;
+
+
+/*animações*/
+@keyframes up {
+    from {
+        opacity: 0;
+        transform: translateY(16px);
+    }
+
+    to {
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
+
+.animate-up {
+    animation-name: up;
+    animation-duration: 300ms;
+    animation-fill-mode: backwards;
+}
+
+#logo {
+    animation-delay: 50ms;
+}
+
+.location {
+    animation-delay: 100ms;
+}
+
+main h1 {
+    animation-delay: 150ms;
+}
+
+.visit p {
+    animation-delay: 200ms;
+}
+
+.visit a {
+    animation-delay: 250ms;
 }
