--- a/public/CSS/page-landing.css
+++ b/public/CSS/page-landing.css
@@ -10,11 +10,28 @@
 #container {
     margin: auto;
 
-    width: 90%;
+    width: min(90%, 112rem);
 }
 
 .location, h1, .visit p {
     height: 16vh;
+}
+
+#logo {
+    animation-delay: 50ms;
+}
+
+.location {
+    animation-delay: 100ms;
+}
+
+main h1 {
+    animation-delay: 150ms;
+    font-size: clamp(4rem, 8vw, 8.4rem);
+}
+
+.visit p {
+    animation-delay: 200ms;
 }
 
 .visit a {
@@ -32,28 +49,33 @@
     margin: auto;
 
     transition: background .2s;
+    animation-delay: 250ms;
 }
 
 .visit a:hover {
     background: #96feff;
 }
 
-#logo {
-    animation-delay: 50ms;
-}
+/*desktop version*/
+@media (min-width: 760px) {
+    header {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+    }
 
-.location {
-    animation-delay: 100ms;
-}
+    .location, h1, .visit p {
+        height: initial;
+        text-align: initial;
+    }
 
-main h1 {
-    animation-delay: 150ms;
-}
+    .location {
+        text-align: right;
+    }
 
-.visit p {
-    animation-delay: 200ms;
-}
+    main h1 {
+        font-weight: bold;
 
-.visit a {
-    animation-delay: 250ms;
+        width: min(300px, 80%);
+    }
 }
