--- a/public/CSS/page-orphanages.css
+++ b/public/CSS/page-orphanages.css
@@ -59,3 +59,9 @@ a.create-orphanage {
 a.create-orphanage:hover {
     background: #17D6EB;
 }
+
+.leaflet-popup-content-wrapper {
+    background: rgba(255, 255, 255, 0.8);
+    box-shadow: 17.2828px 27.65px 41.48px rgba(23, 142, 166, 0.16);
+    border-radius: 20px;
+}
