--- a/public/CSS/page-orphanages.css
+++ b/public/CSS/page-orphanages.css
@@ -43,6 +43,8 @@ a.create-orphanage {
     right: 4rem;
     bottom: 4rem;
 
+    z-index: 1000;
+
     width: 6.4rem;
     height: 6.4rem;
     background: #15C3D6;
@@ -62,6 +64,43 @@ a.create-orphanage:hover {
 
 .leaflet-popup-content-wrapper {
     background: rgba(255, 255, 255, 0.8);
-    box-shadow: 17.2828px 27.65px 41.48px rgba(23, 142, 166, 0.16);
     border-radius: 20px;
+}
+
+.leaflet-popup-content {
+    color: #0089A5;
+    font-weight: 600;
+    margin: .8rem 1.2rem;
+
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.leaflet-popup-content a {
+    width: 4rem;
+    height: 4rem;
+    background: #15C3D6;
+    box-shadow: 17.2828px 27.65px 41.48px rgba(23, 142, 166, 0.16);
+    border-radius: 12px;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    transition: background-color .2s;
+}
+
+.leaflet-popup-content a:hover {
+    background: #17D6EB;
+}
+
+.leaflet-popup-tip {
+    display: none;
+}
+
+.leaflet-container {
+    font: 700 2rem/1 'Nunito', sans-serif;
+
+    z-index: 1;
 }
