--- a/public/CSS/animations.css
+++ b/public/CSS/animations.css
@@ -20,6 +20,15 @@
     }
 }
 
+@keyframes appear {
+    form {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
+}
+
 .animate-up {
     animation-name: up;
     animation-duration: 300ms;
@@ -31,3 +40,8 @@
     animation-duration: 300ms;
 }
 
+.animate-appear {
+    animation-name: appear;
+    animation-duration: 300ms;
+    animation-fill-mode: backwards;
+}
