--- a/public/CSS/page-orphanage.css
+++ b/public/CSS/page-orphanage.css
@@ -37,3 +37,97 @@ aside.sidebar footer button:hover {
 .with-sidebar {
     padding-left: 110px;
 }
+
+/* details */
+
+.orphanage-details {
+    width: 70rem;
+    margin: 6.4rem auto;
+    background: white;
+    border: 1px solid #D3E2E5;
+
+    border-radius: 2rem;
+
+    overflow: hidden;
+}
+
+.orphanage-details > img {
+    width: 100%;
+    height: 30rem;
+    object-fit: cover;
+}
+
+.images {
+    display: grid;
+    grid-template-columns: repeat(6, 1fr);
+    column-gap: 1.6rem;
+    margin: 16px 40px 0;
+}
+
+.images button {
+    border: 0;
+    background: none;
+
+    height: 8.8rem;
+    cursor: pointer;
+    border-radius: 2rem;
+
+    overflow: hidden;
+
+    opacity: 0.6;
+
+    transition: opacity 0.2s;
+}
+
+.images button:hover,
+.images button.active {
+    opacity: 1;
+}
+
+.images button img {
+    width: 100%;
+    height: 8.8rem;
+    object-fit: cover;
+}
+
+/*orphanage-details-content*/
+.orphanage-details-content {
+    padding: 8rem;
+}
+
+.orphanage-details-content h1 {
+    color: #4D6F80;
+    font-size: 5.4rem;
+    line-height: 1.5;
+    margin-bottom: 0.8rem;
+}
+
+.orphanage-details-content p {
+    line-height: 1.6;
+    color: #5C8599;
+    margin-top: 2.4rem;
+}
+
+/* Map */
+.map-container {
+    margin-top: 6.4rem;
+    background: #e6f7fb;
+    border: 1px solid #b3dae2;
+    border-radius: 2rem;
+}
+
+#mapid {
+    width: 100%;
+    height: 28rem;
+}
+
+.map-container footer {
+    padding: 2rem 0;
+
+    text-align: center;
+}
+
+.map-container footer a {
+    color: #0089a5;
+    text-decoration: none;
+}
