--- a/public/CSS/page-orphanage.css
+++ b/public/CSS/page-orphanage.css
@@ -131,3 +131,8 @@ aside.sidebar footer button:hover {
     color: #0089a5;
     text-decoration: none;
 }
+
+.map-container .leaflet-container {
+    border-bottom: 1px solid #dde3f0;
+    border-radius: 2rem;
+}
