--- a/public/CSS/page-create-orphanage.css
+++ b/public/CSS/page-create-orphanage.css
@@ -7,15 +7,16 @@ main {
     flex: 1;
 }
 
-form {
-    width: 70rem;
-    margin: 6.4rem auto;
-    background: white;
-    border: 1px solid #D3E2E5;
-
-    border-radius: 2rem;
-
-    overflow: hidden;
-
-    padding: 8rem;
+.map-container {
+    margin: 0 0 4rem;
 }
+
+.map-container .leaflet-container {
+    border-radius: 20px 20px 0 0;
+}
+
+.map-container footer {
+    background: #F5F8FA;
+    border-radius: 0 0 20px 20px;
+}
+
