--- a/public/CSS/form.css
+++ b/public/CSS/form.css
@@ -97,6 +97,10 @@ fieldset legend {
     position: relative;
 }
 
+.new-upload + .new-upload {
+    margin-top: 2.4rem;
+}
+
 .new-upload span {
     position: absolute;
     right: 12px;
