--- a/src/views/index.html
+++ b/src/views/index.html
@@ -5,11 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Happy</title>
-    <link rel="shortcut icon" href="public/images/logo-icon.png" type="image/x-icon"/>
+    
+    <link rel="shortcut icon" href="/images/logo-icon.png" type="image/x-icon"/>
 
-    <link rel="stylesheet" href="public/CSS/main.css" />
-    <link rel="stylesheet" href="public/CSS/animations.css">
-    <link rel="stylesheet" href="public/CSS/page-landing.css">
+    <link rel="stylesheet" href="/CSS/main.css" />
+    <link rel="stylesheet" href="/CSS/animations.css">
+    <link rel="stylesheet" href="/CSS/page-landing.css">
 
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;800&display=swap" rel="stylesheet">
@@ -21,7 +22,7 @@
           <img 
             class="animate-up"
             id="logo" 
-            src="public/images/logo.svg" 
+            src="/images/logo.svg" 
             alt="Logomarca de Happy" 
           />
 
@@ -38,7 +39,7 @@
             <p class="animate-up">Visite orfanatos e mude a vida de muitas crianças</p>
 
             <a href="orphanages.html" title="Visite orfanatos" class="animate-up">
-              <img src="public/images/arrow.svg" alt="Ir para o mapa" />
+              <img src="/images/arrow.svg" alt="Ir para o mapa" />
             </a>
           </section>
         </main>
