--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -38,7 +38,7 @@
           <section class="visit">
             <p class="animate-up">Visite orfanatos e mude a vida de muitas crianças</p>
 
-            <a href="orphanages.html" title="Visite orfanatos" class="animate-up">
+            <a href="/orphanages" title="Visite orfanatos" class="animate-up">
               <img src="/images/arrow.svg" alt="Ir para o mapa" />
             </a>
           </section>
