--- a/src/views/create-orphanage.hbs
+++ b/src/views/create-orphanage.hbs
@@ -15,15 +15,15 @@
     integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA=="
     crossorigin=""></script>
 
-    <link rel="shortcut icon" href="public/images/logo-icon.png" type="image/x-icon"/>
+    <link rel="shortcut icon" href="/images/logo-icon.png" type="image/x-icon"/>
 
-    <link rel="stylesheet" href="public/CSS/main.css" />
-    <link rel="stylesheet" href="public/CSS/animations.css">
-    <link rel="stylesheet" href="public/CSS/sidebar.css">
-    <link rel="stylesheet" href="public/CSS/map.css">
-    <link rel="stylesheet" href="public/CSS/page-create-orphanage.css">
-    <link rel="stylesheet" href="public/CSS/form.css">
-    <link rel="stylesheet" href="public/CSS/buttons.css">
+    <link rel="stylesheet" href="/CSS/main.css" />
+    <link rel="stylesheet" href="/CSS/animations.css">
+    <link rel="stylesheet" href="/CSS/sidebar.css">
+    <link rel="stylesheet" href="/CSS/map.css">
+    <link rel="stylesheet" href="/CSS/page-create-orphanage.css">
+    <link rel="stylesheet" href="/CSS/form.css">
+    <link rel="stylesheet" href="/CSS/buttons.css">
 
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700;800&display=swap" rel="stylesheet">
@@ -31,10 +31,10 @@
   <body>
     <div id="page-create-orphanage">
       <aside class="animate-right sidebar">
-        <img src="public/images/map-marker.svg" alt="Happy">
+        <img src="/images/map-marker.svg" alt="Happy">
         <footer>
           <button onclick="history.back()">
-            <img src="public/images/arrow-back.svg" alt="Voltar">
+            <img src="/images/arrow-back.svg" alt="Voltar">
           </button>
         </footer>
       </aside>
@@ -79,14 +79,14 @@
                 <div class="new-upload">
                   <input name="images" type="images" placeholder="Cole o link da foto aqui" required>
                   <span onclick="deleteField(event)">
-                    <img src="public/images/remove-file.svg" alt="Remover Foto">
+                    <img src="/images/remove-file.svg" alt="Remover Foto">
                   </span>
                 </div>
 
               </div>
 
               <button onclick="addPhotoField()" type="button">
-                <img src="public/images/add-file.svg" alt="Nova imagem">
+                <img src="/images/add-file.svg" alt="Nova imagem">
               </button>
             </div>
 
@@ -129,6 +129,6 @@
       </main>
     
     </div>
-    <script src="./public/scripts/page-create-orphanage.js"></script>
+    <script src="/scripts/page-create-orphanage.js"></script>
   </body>
 </html>
