--- a/src/views/orphanage.hbs
+++ b/src/views/orphanage.hbs
@@ -15,14 +15,14 @@
     integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA=="
     crossorigin=""></script>
 
-    <link rel="shortcut icon" href="public/images/logo-icon.png" type="image/x-icon"/>
+    <link rel="shortcut icon" href="/images/logo-icon.png" type="image/x-icon"/>
 
-    <link rel="stylesheet" href="public/CSS/main.css" />
-    <link rel="stylesheet" href="public/CSS/animations.css">
-    <link rel="stylesheet" href="public/CSS/sidebar.css">
-    <link rel="stylesheet" href="public/CSS/map.css">
-    <link rel="stylesheet" href="public/CSS/page-orphanage.css">
-    <link rel="stylesheet" href="public/CSS/buttons.css">
+    <link rel="stylesheet" href="/CSS/main.css" />
+    <link rel="stylesheet" href="/CSS/animations.css">
+    <link rel="stylesheet" href="/CSS/sidebar.css">
+    <link rel="stylesheet" href="/CSS/map.css">
+    <link rel="stylesheet" href="/CSS/page-orphanage.css">
+    <link rel="stylesheet" href="/CSS/buttons.css">
 
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700;800&display=swap" rel="stylesheet">
@@ -30,17 +30,17 @@
   <body>
     <div id="page-orphanage">
       <aside class="animate-right sidebar">
-        <img src="public/images/map-marker.svg" alt="Happy">
+        <img src="/images/map-marker.svg" alt="Happy">
         <footer>
           <button onclick="history.back()">
-            <img src="public/images/arrow-back.svg" alt="Voltar">
+            <img src="/images/arrow-back.svg" alt="Voltar">
           </button>
         </footer>
       </aside>
 
       <main class="animate-appear with-sidebar">
         <div class="orphanage-details">
-          <img src="public/images/home.jpg" alt="Lar das meninas">
+          <img src="/images/home.jpg" alt="Lar das meninas">
 
           <div class="images">
             <button onclick="selectImage(event)" class="active" type="button">
@@ -93,17 +93,17 @@
 
             <div class="open-details">
               <div class="hour">
-                <img src="public/images/clock.svg" alt="Horários">
+                <img src="/images/clock.svg" alt="Horários">
                 Horários de visitas Das 18h até 8h
               </div>
               <div class="open-on-weekends">
-                <img src="public/images/info.svg" alt="Informaçao">
+                <img src="/images/info.svg" alt="Informaçao">
                 Atedemos fim de semana.
               </div>
             </div>
 
             <button class="primary-button" type="button">
-              <img src="public/images/whatsapp.svg" alt="Chamar no whatsapp">
+              <img src="/images/whatsapp.svg" alt="Chamar no whatsapp">
               Entrar em contato
             </button>
           </div>
@@ -112,6 +112,6 @@
       </main>
     
     </div>
-    <script src="./public/scripts/page-orphanage.js"></script>
+    <script src="/scripts/page-orphanage.js"></script>
   </body>
 </html>
