--- a/src/views/orphanage.hbs
+++ b/src/views/orphanage.hbs
@@ -92,7 +92,7 @@
 
             </div>
 
-            <a href="https://api.whatsapp.com/send?l=pt_BR&phone={{orphanage.whatsapp}}"
+            <a href="https://api.whatsapp.com/send?l=pt_BR&phone={{orphanage.whatsapp}}&text=Oi, quero conversar sobre visitas no {{orphanage.name}}"
             target="_black" class="primary-button" type="button">
               <img src="/images/whatsapp.svg" alt="Chamar no whatsapp">
               Entrar em contato
