--- a/src/views/create-orphanage.hbs
+++ b/src/views/create-orphanage.hbs
@@ -39,8 +39,8 @@
         </footer>
       </aside>
 
-      <main class="animate-appear with-sidebar">
-        <form action="">
+      <main class="animate-appear with-sidebar" onsubmit="validate(event)">
+        <form action="save-orphanage" method="POST">
           <fieldset>
             <legend>Dados</legend>
 
