--- a/src/views/create-orphanage.hbs
+++ b/src/views/create-orphanage.hbs
@@ -77,7 +77,7 @@
               <div class="images-upload" id="images">
 
                 <div class="new-upload">
-                  <input name="images" type="images" placeholder="Cole o link da foto aqui" required>
+                  <input name="images" type="images" placeholder="Cole o link da foto aqui" required type="url">
                   <span onclick="deleteField(event)">
                     <img src="/images/remove-file.svg" alt="Remover Foto">
                   </span>
